--- a/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/Base.lproj/Main.storyboard
@@ -253,7 +253,7 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="WDe-P8-NNQ"/>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="ZrE-kh-ekA" firstAttribute="centerY" secondItem="N8X-7F-nbA" secondAttribute="centerY" id="Kma-by-S2j"/>
                             <constraint firstItem="WDe-P8-NNQ" firstAttribute="trailing" secondItem="ZrE-kh-ekA" secondAttribute="trailing" constant="15" id="hYb-D1-7ET"/>
